fix table th alignment

--- a/public/assets/css/print.css
+++ b/public/assets/css/print.css
@@ -19,7 +19,7 @@ body {
     padding: 2px 5px;
 }
 
-.table th {
+th {
     text-align: center;
 }
 
